# KIV-UPS_sp_server

./: .gitignore  CMakeLists.txt  Makefile  README.md  run.sh
src/: Client.cpp  Client.hpp  ClientManager.cpp  ClientManager.hpp  Helper.hpp  Logger.cpp  Logger.hpp  Server.cpp  Server.hpp  ServerHandler.cpp  ServerHandler.hpp  main.cpp
src/game/: GameRoom.cpp  GameRoom.hpp  Lobby.cpp  Lobby.hpp  RoomHnefatafl.cpp  RoomHnefatafl.hpp
src/network/: Client.cpp  Client.hpp  ClientManager.cpp  ClientManager.hpp  PacketHandler.cpp  PacketHandler.hpp  Server.cpp  Server.hpp  opcodes.hpp  packet_handler.hpp  protocol.hpp  server_handler.cpp  server_handler.hpp
src/system/: Logger.cpp  argument_parser.cpp  defaults.hpp  logger_helper.hpp  main.cpp  main.hpp  signal.hpp
